# internal/api/auth.go
@@ -9,11 +9,14 @@ import (
 	steamauth "github.com/TeddiO/GoSteamAuth/src"
 	"github.com/cs2-server/backend/config"
 	m "github.com/cs2-server/backend/internal/model"
+	"github.com/cs2-server/backend/internal/render"
 	"github.com/sirupsen/logrus"
 )
 
 const (
 	ErrMethodNotAllowed = "method not allowed"
+	ErrInvalidAuth      = "invalid auth"
+	ErrParamNotSet      = "param is not set"
 )
 
 type jwtGenerator interface {
@@ -40,40 +43,38 @@ func NewAuthAPI(cfg *config.Config, logger *logrus.Logger, jwt jwtGenerator, ser
 	}
 }
 
-// @Summary Redirects the client to the Steam authentication page.
-// @Description Redirects the client to the Steam authentication page using the Steam API.
+// @Summary Redirects client to Steam authentication page
 // @Tags auth
 // @Accept json
 // @Produce json
 // @Success 302 {object} nil
-// @Failure 405 {object} nil
-// @Router /auth/login [get]
+// @Failure 405 {object} render.Err
+// @Router /api/auth/login [get]
 func (a *AuthAPI) Login(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		a.logger.Errorln(ErrMethodNotAllowed)
-		JSON(w, http.StatusMethodNotAllowed, nil)
+		render.Error(w, http.StatusMethodNotAllowed, ErrMethodNotAllowed)
 
 		return
 	}
 
-	query := fmt.Sprintf("http://%s:%s/auth/process", a.cfg.HTTP.Host, a.cfg.HTTP.Port)
+	query := fmt.Sprintf("http://%s:%s/api/auth/process", a.cfg.HTTP.Host, a.cfg.HTTP.Port)
 	steamauth.RedirectClient(w, r, steamauth.BuildQueryString(query))
 }
 
-// @Summary Processes the Steam authentication response and generates JWT tokens.
-// @Description Validates the Steam authentication response and generates JWT tokens.
+// @Summary Processes Steam authentication response and generates JWT tokens
 // @Tags auth
 // @Accept json
 // @Produce json
 // @Success 200 {object} m.JWT
-// @Failure 400 {object} nil
-// @Failure 405 {object} nil
-// @Failure 500 {object} nil
-// @Router /auth/process [get]
+// @Failure 400 {object} render.Err
+// @Failure 405 {object} render.Err
+// @Failure 500 {object} render.Err
+// @Router /api/auth/process [get]
 func (a *AuthAPI) ProcessLogin(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		a.logger.Errorln(ErrMethodNotAllowed)
-		JSON(w, http.StatusMethodNotAllowed, nil)
+		render.Error(w, http.StatusMethodNotAllowed, ErrMethodNotAllowed)
 
 		return
 	}
@@ -81,7 +82,7 @@ func (a *AuthAPI) ProcessLogin(w http.ResponseWriter, r *http.Request) {
 	query, err := url.ParseQuery(r.URL.RawQuery)
 	if err != nil {
 		a.logger.Errorln(err)
-		JSON(w, http.StatusInternalServerError, nil)
+		render.Error(w, http.StatusInternalServerError, err.Error())
 
 	}
 
@@ -90,14 +91,14 @@ func (a *AuthAPI) ProcessLogin(w http.ResponseWriter, r *http.Request) {
 	steamID, isValid, err := steamauth.ValidateResponse(queryMap)
 	if err != nil {
 		a.logger.Errorln(err)
-		JSON(w, http.StatusInternalServerError, nil)
+		render.Error(w, http.StatusInternalServerError, err.Error())
 
 		return
 	}
 
 	if !isValid {
-		a.logger.Errorln("invalid auth")
-		JSON(w, http.StatusInternalServerError, nil)
+		a.logger.Errorln(ErrInvalidAuth)
+		render.Error(w, http.StatusInternalServerError, ErrInvalidAuth)
 
 		return
 	}
@@ -105,87 +106,77 @@ func (a *AuthAPI) ProcessLogin(w http.ResponseWriter, r *http.Request) {
 	tokens, err := a.jwt.GenerateTokens(steamID)
 	if err != nil {
 		a.logger.Errorln(err)
-		JSON(w, http.StatusInternalServerError, nil)
+		render.Error(w, http.StatusInternalServerError, ErrInvalidAuth)
 	}
 
-	JSON(w, http.StatusOK, tokens)
+	render.JSON(w, http.StatusOK, tokens)
 }
 
-// @Summary Refreshes the JWT tokens.
-// @Description Refreshes the JWT tokens based on the provided steam_id. Requires a valid JWT refresh token.
+// @Summary Refreshes JWT tokens
 // @Tags auth
 // @Security BearerAuth
-// @Accept application/x-www-form-urlencoded
 // @Produce json
-// @Param steam_id formData string true "Steam ID"
+// @Param id formData string true "User ID"
 // @Success 200 {object} m.JWT
-// @Failure 400 {object} nil
-// @Failure 401 {object} nil
-// @Failure 405 {object} nil
-// @Failure 500 {object} nil
-// @Router /auth/refresh [post]
+// @Failure 400 {object} render.Err
+// @Failure 401 {object} render.Err
+// @Failure 405 {object} render.Err
+// @Failure 500 {object} render.Err
+// @Router /api/auth/refresh [post]
 func (a *AuthAPI) RefreshToken(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodPost {
 		a.logger.Errorln(ErrMethodNotAllowed)
-		JSON(w, http.StatusMethodNotAllowed, nil)
+		render.Error(w, http.StatusMethodNotAllowed, ErrMethodNotAllowed)
 
 		return
 	}
 
-	steamID := r.FormValue("steam_id")
+	id := r.FormValue("id")
 
-	if steamID == "" {
-		a.logger.Errorln("steam_id param is not set")
-		JSON(w, http.StatusBadRequest, nil)
+	if id == "" {
+		a.logger.Errorln(ErrParamNotSet)
+		render.Error(w, http.StatusBadRequest, ErrParamNotSet)
 
 		return
 	}
 
-	tokens, err := a.jwt.GenerateTokens(steamID)
+	tokens, err := a.jwt.GenerateTokens(id)
 	if err != nil {
 		a.logger.Errorln(err)
-		JSON(w, http.StatusInternalServerError, nil)
+		render.Error(w, http.StatusInternalServerError, err.Error())
 	}
 
-	JSON(w, http.StatusOK, tokens)
+	render.JSON(w, http.StatusOK, tokens)
 }
 
-// @Summary Retrieves the Steam user profile.
-// @Description Fetches the Steam user profile based on the provided steam_id. Requires a valid JWT token.
+// @Summary Retrieves user profile
 // @Tags profile
 // @Security BearerAuth
 // @Accept json
 // @Produce json
-// @Param steam_id query string true "Steam ID"
+// @Param id path string true "User ID"
 // @Success 200 {object} m.Profile
-// @Failure 400 {object} nil
-// @Failure 401 {object} nil
-// @Failure 500 {object} nil
-// @Router /profile [get]
+// @Failure 400 {object} render.Err
+// @Failure 401 {object} render.Err
+// @Failure 500 {object} render.Err
+// @Router /api/profile/{id} [get]
 func (a *AuthAPI) GetProfile(w http.ResponseWriter, r *http.Request) {
 	if r.Method != http.MethodGet {
 		a.logger.Errorln(ErrMethodNotAllowed)
-		JSON(w, http.StatusMethodNotAllowed, nil)
+		render.Error(w, http.StatusMethodNotAllowed, ErrMethodNotAllowed)
 
 		return
 	}
 
-	steamID := r.FormValue("steam_id")
+	id := r.PathValue("id")
 
-	if steamID == "" {
-		a.logger.Errorln("steam_id param is not set")
-		JSON(w, http.StatusBadRequest, nil)
-
-		return
-	}
-
-	profile, err := a.service.GetProfile(r.Context(), a.cfg.Steam.APIKey, steamID)
+	profile, err := a.service.GetProfile(r.Context(), a.cfg.Steam.APIKey, id)
 	if err != nil {
 		a.logger.Errorln(err)
-		JSON(w, http.StatusInternalServerError, nil)
+		render.Error(w, http.StatusInternalServerError, err.Error())
 
 		return
 	}
 
-	JSON(w, http.StatusOK, profile)
+	render.JSON(w, http.StatusOK, profile)
 }
